--- a/rag_ui/package.json
+++ b/rag_ui/package.json
@@ -11,15 +11,16 @@
   "dependencies": {
     "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
-    "astro": "^5.0.5",
+    "astro": "^5.0.6",
     "axios": "^1.7.9",
-    "tailwindcss": "^3.4.16",
-    "@tailwindcss/typography": "^0.5.10",
+    "lodash": "^4.17.21",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "lodash": "^4.17.21"
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202"
