--- a/rag_ui/package.json
+++ b/rag_ui/package.json
@@ -3,24 +3,23 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
+    "dev": "npm install && npm install astro && npm install @heroicons/react && npm run dev",
+    "build": "npm install && npm install astro && npm install @heroicons/react && npm run build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
-    "@heroicons/react": "^2.2.0",
-    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
-    "astro": "^5.0.6",
+    "astro": "^5.0.5",
     "axios": "^1.7.9",
-    "lodash": "^4.17.21",
+    "tailwindcss": "^3.4.16",
+    "@tailwindcss/typography": "^0.5.10",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "tailwindcss": "^3.4.16"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202"
