--- a/rag_backend/environment.yml
+++ b/rag_backend/environment.yml
@@ -14,7 +14,7 @@ dependencies:
     - sentence-transformers==3.3.1
     - fastapi==0.115.6
     - "uvicorn[standard]==0.20.0"
-    - pypdf==5.1.0
+    - PyPDF2==3.0.1
     - requests==2.32.3
     - python-dotenv==1.0.0
     - pymongo[srv]==4.9.2
