--- a/rag_backend/environment.yml
+++ b/rag_backend/environment.yml
@@ -14,18 +14,18 @@ dependencies:
     - sentence-transformers==3.3.1
     - fastapi==0.115.6
     - "uvicorn[standard]==0.20.0"
-    - PyPDF2==3.0.1
+    - pypdf==3.17.1
     - requests==2.32.3
     - python-dotenv==1.0.0
     - pymongo[srv]==4.9.2
     - transformers>=4.36.2
     - torch>=2.2.0
     # LangChain y extensiones
-    - langchain==0.1.12
-    - langchain-community==0.0.27
-    - langchain-openai==0.0.8
-    - langchain-huggingface==0.0.12
-    - langchain-mongodb==0.0.1
+    - langchain
+    - langchain-community
+    - langchain-openai
+    - langchain-huggingface
+    - langchain-mongodb
     # Logging y monitoreo
-    - structlog==24.1.0
-    - prometheus-client==0.20.0
+    - structlog
+    - prometheus-client
